refactor location out of AudioParameters and modernizations